<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublishActivity">

    <TextView
        android:id="@+id/topicPubTextView"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/topicPubTextView" />

    <EditText
        android:id="@+id/messagePubPlainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/messagePubTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/messagePubTextView" />

    <TextView
        android:id="@+id/messagePubTextView"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/topicPubTextView"
        android:layout_marginTop="117dp"
        android:text="@string/messagePubTextView" />

    <EditText
        android:id="@+id/topicPubPlainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/topicPubTextView"
        android:layout_alignStart="@+id/messagePubPlainText"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/topicPubPlainText" />

    <Button
        android:id="@+id/publishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/publishBtn" />
</RelativeLayout>