<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LightActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="354dp"
        android:layout_height="179dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/kitchenLightTextView"
                        android:layout_width="57dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kitchenLightTextView" />

                    <ToggleButton
                        android:id="@+id/kitchenLightToogleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="setKitchenLightState"
                        android:text="@string/kitchenLightToogleBtn"
                        android:textOff="Off"
                        android:textOn="On" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bedroomLightTextView"
                        android:layout_width="13dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bedroomLightTextView" />

                    <SeekBar
                        android:id="@+id/bedroomLightSeekBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/livingLightTextView"
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/livingLightTextView" />

                    <ToggleButton
                        android:id="@+id/livingLightToogleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="setLivingLightState"
                        android:layout_weight="1"
                        android:text="@string/livingLightToogleBtn"
                        android:textOff="Off"
                        android:textOn="On"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/outsideLightTextView"
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/outsideLightTextView" />

                    <ToggleButton
                        android:id="@+id/outsideLightToogleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/outsideLightToogleBtn"
                        android:onClick="outsideLightClick"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textprobe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/textprobe1"
        app:layout_constraintBottom_toBottomOf="@+id/textprobe2"
        app:layout_constraintEnd_toStartOf="@+id/textprobe2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textprobe2" />

    <TextView
        android:id="@+id/textprobe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:text="@string/textprobe2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textprobe1"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</android.support.constraint.ConstraintLayout>